fix:전문분야 dto 수정
